# solana-program-library

./: Cargo.toml
associated-token-account/client/: Cargo.toml
associated-token-account/client/src/: instruction.rs
libraries/discriminator/: Cargo.toml
libraries/pod/: Cargo.toml
libraries/program-error/: Cargo.toml  README.md
libraries/program-error/derive/src/: macro_impl.rs  parser.rs
libraries/program-error/src/: lib.rs
libraries/program-error/tests/: mod.rs  spl.rs
libraries/tlv-account-resolution/: Cargo.toml
libraries/type-length-value/: Cargo.toml
memo/program/: Cargo.toml
token-group/interface/: Cargo.toml
token-metadata/interface/: Cargo.toml
token/api/: Cargo.toml
token/api/src/: lib.rs
token/confidential-transfer/ciphertext-arithmetic/: Cargo.toml
token/confidential-transfer/proof-extraction/: Cargo.toml
token/confidential-transfer/proof-generation/: Cargo.toml
token/confidential-transfer/proof-generation/src/: burn.rs  lib.rs  mint.rs  transfer.rs  transfer_with_fee.rs
token/program/: Cargo.toml
token/program-2022/: Cargo.toml
token/program-2022/src/extension/confidential_transfer/: account_info.rs
token/program/src/: entrypoint.rs  lib.rs  processor.rs
token/transfer-hook/interface/: Cargo.toml
