[package]
name = "spl-tlv-account-resolution"
version = "0.8.1"
description = "Solana Program Library TLV Account Resolution Interface"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
serde-traits = ["dep:serde"]
test-sbf = []

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
serde = { version = "1.0.210", optional = true }
solana-program = { git = "https://github.com/anza-xyz/agave.git", rev = "3628c03" }
spl-discriminator = { version = "0.3.0", path = "../discriminator" }
spl-program-error = { version = "0.5.0", path = "../program-error" }
spl-pod = { version = "0.4.0", path = "../pod" }
spl-type-length-value = { version = "0.6.0", path = "../type-length-value" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
