[package]
name = "spl-token-group-interface"
version = "0.4.2"
description = "Solana Program Library Token Group Interface"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
solana-program = { git = "https://github.com/anza-xyz/agave.git", rev = "3628c03" }
spl-discriminator = { version = "0.3.0" , path = "../../libraries/discriminator" }
spl-pod = { version = "0.4.0", path = "../../libraries/pod", features = ["borsh"] }
spl-program-error = { version = "0.5.0" , path = "../../libraries/program-error" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
