[package]
name = "spl-token-api"
version = "0.1.0"
description = "Solana Program Library Token API"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
bytemuck = "1.15.0"
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.2"
solana-program = ">=1.18.2,<=2"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
