[package]
name = "spl-token-confidential-transfer-ciphertext-arithmetic"
version = "0.1.0"
description = "Solana Program Library Confidential Transfer Ciphertext Arithmetic"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytemuck = "1.19.0"
solana-curve25519 = { git = "https://github.com/anza-xyz/agave.git", rev = "3628c03" }
solana-zk-sdk = { git = "https://github.com/anza-xyz/agave.git", rev = "3628c03" }


[lib]
crate-type = ["cdylib", "lib"]
