[package]
name = "spl-token-confidential-transfer-proof-extraction"
version = "0.1.0"
description = "Solana Program Library Confidential Transfer Proof Extraction"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
solana-curve25519 = { git = "https://github.com/anza-xyz/agave.git", rev = "eaec893" }
solana-zk-sdk = { git = "https://github.com/anza-xyz/agave.git", rev = "eaec893" }
thiserror = "1.0.64"

[lib]
crate-type = ["cdylib", "lib"]
